1998-06-11  Alex Lancaster  <alex@santafe.edu>

	* common.dsl (%generate-article-titlepage%): Set to false - to
	prevent extra titles being generated in both print and html
	backends.

	* common.el (pathname-for-swarmdocs): Created a conditional to
	create the appropriate pathnames for {set,install,over} modules.
	(pathname-for-swarmdocs-revision-output): Create the
	{set,install,over}revhistory.sgml filenames for parsed ChangeLog
	output.

	* history.el (process-changelog): Added (set over install) to the
	list of modules to be excluded from .h header file parsing.

	* catalog.in: Added PUBLIC identifiers for all SGML in over and
	install and set.  Created PUBLIC identifiers for the
	{over,install,set}.ent lists.

	* configure.in (AC_OUTPUT): Fix pathnames in output files
	generated to be consistent with name change of modules
	{over,install}.

	* Makefile.am (SUBDIRS): Changed overview -> over; installing ->
	install.

1998-06-11  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (SUBDIRS):  Add figs.

	* catalog.in: Find jpeg, and generated EPS files in build directory.

	* configure.in: Extract figs/Makefile.

1998-06-11  Alex Lancaster  <alex@santafe.edu>

	* html.dsl (nav-context): Local override to this function of
	(component-element-list) - remove 'refentry' from the list to
	correctly generates the title of the enclosing reference as the
	navigation subtitle.
	(nav-context?): Also include 'refentry' in the list gi components
	that require a navigation subtitle.
	(stylesheet):  Include missing sgml end-tag.

	* common.dsl (abstract): Made {empty-sosofo. process-children} in
	reference-titlepage-{recto, verso}-mode, respectively to fix
	position after (partintro) text.
	(common-titlepage-verso-elements): Uncommented 'abstract' from
	list - added 'bookbiblio'.

1998-06-10  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* print.dsl ($img$): New function (handle public identifiers,
	display and always center).  Use it in graphic element in