@@ -44,16 +44,10 @@
 
 (defun pathname-for-swarmdocs (module-sym filename)
   (let ((module-name (symbol-name module-sym)))
-    (cond ((eq module-sym 'src)
-           (concat (get-swarmdocs) "src/" filename))
-          ((eq module-sym 'set)
-           (concat (get-swarmdocs) "set/" filename)) 
-          ((eq module-sym 'install)
-           (concat (get-swarmdocs) "install/" filename))
-          ((eq module-sym 'over)
-           (concat (get-swarmdocs) "over/" filename))
-          (t
-           (concat (get-swarmdocs) "src/" module-name "/" filename)))))
+    (concat (get-swarmdocs) 
+            (case module-sym
+              ((src set install over) (concat module-name "/" filename))
+              (otherwise (concat "src/" module-name "/" filename))))))
 
 (defun get-swarmdocs-build-area ()
     (getenv "SWARMDOCS_BUILD_AREA"))
@@ -69,26 +63,17 @@
 
 (defun pathname-for-swarmdocs-revision-output (module-sym)
   (let ((module-name (symbol-name module-sym)))
-    (cond ((eq module-sym 'src)
-           (concat (get-swarmdocs-build-area)
-                   "src/srcrevhistory.sgml"))
-          ((eq module-sym 'set)
-           (concat (get-swarmdocs-build-area)
-                   "set/setrevhistory.sgml"))
-          ((eq module-sym 'install)
-           (concat (get-swarmdocs-build-area)
-                   "install/installrevhistory.sgml")) 
-          ((eq module-sym 'over)
-           (concat (get-swarmdocs-build-area)
-                   "over/overrevhistory.sgml"))
-          (t
-           (concat (get-swarmdocs-build-area)
-                   "src/"
-                   module-name
-                   "/"
-                   module-name
-                   "revhistory.sgml")))))
-  
+    (case module-sym
+      ((src set install over) 
+       (concat (get-swarmdocs-build-area)
+               module-name "/" module-name "revhistory.sgml"))
+      (otherwise (concat (get-swarmdocs-build-area)
+                         "src/"
+                         module-name
+                         "/"
+                         module-name
+                         "revhistory.sgml")))))
+
 (defun insert-text (text)
   (let ((beg (point)))
     (insert text)
